compilateurMinCaml/tests/typechecking/invalid/leBool.ml
let x = 1 <= true in ()